@@ -39,18 +39,18 @@ function serverUpdateHealthBalanceStatus()
 	%teamHealth[2] = $Team2.numPlayers == 0 ? 1.0 : %teamHealth[2] / $Team2.numPlayers / 100;
 
 	%balance = %teamHealth[1] - %teamHealth[2];
-
-	setAllHudMenuT(0, 
-		"\n<just:center><color:888888>Health balance:\n<just:left>" @
-		"<bitmap:share/hud/rotc/spec><sbreak>",
-		1, 1);
-
 	%balance = 1 - ((%balance+1)/2);
 
 	%spacers = 280 * %balance - 8;
 	if(%spacers < 0) %spacers = 0;
 	if(%spacers > 264) %spacers = 264;
-	setAllHudMenuT(1, "<bitmap:share/hud/rotc/spacer.1x14>", %spacers, 1);
-
-	setAllHudMenuT(2, "<bitmap:share/hud/rotc/marker.up>", 1, 1);
+	
+	$Server::GameStatus::HealthBalance::Spacers = %spacers;
+	
+	for( %clientIndex = 0; %clientIndex < ClientGroup.getCount(); %clientIndex++ )
+	{
+		%client = ClientGroup.getObject(%clientIndex);
+		if(%client.topHudMenu $= "healthbalance")
+			%client.updateTopHudMenuThread();
+	}
 }
