@@ -1,6 +1,13 @@
 What's new?
 ===========
 
+Prototype 3+dev1
+----------------
+
+- Newbie helper
+- Bugfixes
+
+
 Prototype 3-testing
 -------------------
 
